; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plpython/extr_plpy_planobject.c_PLy_plan_execute.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plpython/extr_plpy_planobject.c_PLy_plan_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"|Ol\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @PLy_plan_execute to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @PLy_plan_execute(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i64 0, i64* %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @PyArg_ParseTuple(i32* %8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32** %6, i64* %7)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %17

12:                                               ; preds = %2
  %13 = load i32*, i32** %4, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i64, i64* %7, align 8
  %16 = call i32* @PLy_spi_execute_plan(i32* %13, i32* %14, i64 %15)
  store i32* %16, i32** %3, align 8
  br label %17

17:                                               ; preds = %12, %11
  %18 = load i32*, i32** %3, align 8
  ret i32* %18
}

declare dso_local i32 @PyArg_ParseTuple(i32*, i8*, i32**, i64*) #1

declare dso_local i32* @PLy_spi_execute_plan(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
